fix: remove wrong colors

--- a/styles/web/common/inputs.less
+++ b/styles/web/common/inputs.less
@@ -771,20 +771,7 @@ span.k-numerictextbox
     border-width: 0;
     padding: 0;
 }
- .k-link-increase {
-        background: pink;
-      }
-      .k-link-increase .k-icon {
-        background: purple;
-      }
 
-      .k-link-decrease {
-        background: green;
-      }
-
-      .k-link-decrease .k-icon {
-        background: yellow;
-      }
 .k-numerictextbox .k-icon
 {
     display: block;
